// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Migrator (postgres) generate initial migration: initial-migration-dump 1`] = `
{
  "code": "import { Migration } from '@mikro-orm/migrations';

export class Migration20191013214813 extends Migration {

  override async up(): Promise<void> {
    this.addSql(\`create schema if not exists "custom";\`);
    this.addSql(\`create table "custom"."book_tag2" ("id" bigserial primary key, "name" varchar(50) not null);\`);

    this.addSql(\`create table "custom"."foo_baz2" ("id" serial primary key, "name" varchar(255) not null, "code" varchar(255) not null, "version" timestamptz(3) not null default current_timestamp(3));\`);

    this.addSql(\`create table "custom"."foo_bar2" ("id" serial primary key, "name" varchar(255) not null, "name with space" varchar(255) null, "baz_id" int null, "foo_bar_id" int null, "version" timestamptz(0) not null default current_timestamp(0), "blob" bytea null, "blob2" bytea null, "array" text[] null, "object_property" jsonb null);\`);
    this.addSql(\`alter table "custom"."foo_bar2" add constraint "foo_bar2_baz_id_unique" unique ("baz_id");\`);
    this.addSql(\`alter table "custom"."foo_bar2" add constraint "foo_bar2_foo_bar_id_unique" unique ("foo_bar_id");\`);

    this.addSql(\`create table "custom"."foo_param2" ("bar_id" int not null, "baz_id" int not null, "value" varchar(255) not null, "version" timestamptz(3) not null default current_timestamp(3), primary key ("bar_id", "baz_id"));\`);

    this.addSql(\`create table "custom"."publisher2" ("id" serial primary key, "name" varchar(255) not null default 'asd', "type" text not null default 'local', "type2" text not null default 'LOCAL', "enum1" smallint null, "enum2" smallint null, "enum3" smallint null, "enum4" text null, "enum5" text null);\`);
    this.addSql(\`alter table "custom"."publisher2" add constraint "publisher2_type_check" check ("type" in ('local', 'global'));\`);
    this.addSql(\`alter table "custom"."publisher2" add constraint "publisher2_type2_check" check ("type2" in ('LOCAL', 'GLOBAL'));\`);
    this.addSql(\`alter table "custom"."publisher2" add constraint "publisher2_enum4_check" check ("enum4" in ('a', 'b', 'c'));\`);
    this.addSql(\`alter table "custom"."publisher2" add constraint "publisher2_enum5_check" check ("enum5" in ('a'));\`);

    this.addSql(\`create table "custom"."author2" ("id" serial primary key, "created_at" timestamptz(3) not null default current_timestamp(3), "updated_at" timestamptz(3) not null default current_timestamp(3), "name" varchar(255) not null, "email" varchar(255) not null, "age" int null, "terms_accepted" boolean not null default false, "optional" boolean null, "identities" text[] null, "born" date null, "born_time" time(0) null, "favourite_book_uuid_pk" uuid null, "favourite_author_id" int null, "identity" jsonb null);\`);
    this.addSql(\`create index "custom_email_index_name" on "custom"."author2" ("email");\`);
    this.addSql(\`alter table "custom"."author2" add constraint "custom_email_unique_name" unique ("email");\`);
    this.addSql(\`create index "author2_terms_accepted_index" on "custom"."author2" ("terms_accepted");\`);
    this.addSql(\`create index "author2_born_index" on "custom"."author2" ("born");\`);
    this.addSql(\`create index "born_time_idx" on "custom"."author2" ("born_time");\`);
    this.addSql(\`create index "custom_idx_name_123" on "custom"."author2" ("name");\`);
    this.addSql(\`create index "author2_name_age_index" on "custom"."author2" ("name", "age");\`);
    this.addSql(\`alter table "custom"."author2" add constraint "author2_name_email_unique" unique ("name", "email");\`);

    this.addSql(\`create table "custom"."book2" ("uuid_pk" uuid not null, "created_at" timestamptz(3) not null default current_timestamp(3), "isbn" char(13) null, "title" varchar(255) null default '', "perex" text null, "price" numeric(8,2) null, "double" double precision null, "meta" jsonb null, "author_id" int not null, "publisher_id" int null, primary key ("uuid_pk"));\`);
    this.addSql(\`alter table "custom"."book2" add constraint "book2_isbn_unique" unique ("isbn");\`);
    this.addSql(\`create index "book2_title_index" on "custom"."book2" using gin(to_tsvector('simple', "title"));\`);

    this.addSql(\`create table "custom"."book2_tags" ("order" serial primary key, "book2_uuid_pk" uuid not null, "book_tag2_id" bigint not null);\`);

    this.addSql(\`create table "custom"."book_to_tag_unordered" ("book2_uuid_pk" uuid not null, "book_tag2_id" bigint not null, primary key ("book2_uuid_pk", "book_tag2_id"));\`);

    this.addSql(\`create table "custom"."author2_following" ("author2_1_id" int not null, "author2_2_id" int not null, primary key ("author2_1_id", "author2_2_id"));\`);

    this.addSql(\`create table "custom"."author_to_friend" ("author2_1_id" int not null, "author2_2_id" int not null, primary key ("author2_1_id", "author2_2_id"));\`);

    this.addSql(\`create table "custom"."address2" ("author_id" int not null, "value" varchar(255) not null, primary key ("author_id"));\`);
    this.addSql(\`comment on table "custom"."address2" is 'This is address table';\`);
    this.addSql(\`comment on column "custom"."address2"."value" is 'This is address property';\`);

    this.addSql(\`create table "custom"."test2" ("id" serial primary key, "name" varchar(255) null, "book_uuid_pk" uuid null, "parent_id" int null, "version" int not null default 1);\`);
    this.addSql(\`alter table "custom"."test2" add constraint "test2_book_uuid_pk_unique" unique ("book_uuid_pk");\`);

    this.addSql(\`create table "custom"."publisher2_tests" ("id" serial primary key, "publisher2_id" int not null, "test2_id" int not null);\`);

    this.addSql(\`create table "custom"."configuration2" ("property" varchar(255) not null, "test_id" int not null, "value" varchar(255) not null, primary key ("property", "test_id"));\`);

    this.addSql(\`create table "custom"."test2_bars" ("test2_id" int not null, "foo_bar2_id" int not null, primary key ("test2_id", "foo_bar2_id"));\`);

    this.addSql(\`alter table "custom"."foo_bar2" add constraint "foo_bar2_baz_id_foreign" foreign key ("baz_id") references "custom"."foo_baz2" ("id") on update cascade on delete set null;\`);
    this.addSql(\`alter table "custom"."foo_bar2" add constraint "foo_bar2_foo_bar_id_foreign" foreign key ("foo_bar_id") references "custom"."foo_bar2" ("id") on update cascade on delete set null;\`);

    this.addSql(\`alter table "custom"."foo_param2" add constraint "foo_param2_bar_id_foreign" foreign key ("bar_id") references "custom"."foo_bar2" ("id") on update cascade;\`);
    this.addSql(\`alter table "custom"."foo_param2" add constraint "foo_param2_baz_id_foreign" foreign key ("baz_id") references "custom"."foo_baz2" ("id") on update cascade;\`);

    this.addSql(\`alter table "custom"."author2" add constraint "author2_favourite_book_uuid_pk_foreign" foreign key ("favourite_book_uuid_pk") references "custom"."book2" ("uuid_pk") on update no action on delete cascade;\`);
    this.addSql(\`alter table "custom"."author2" add constraint "author2_favourite_author_id_foreign" foreign key ("favourite_author_id") references "custom"."author2" ("id") on update cascade on delete set null;\`);

    this.addSql(\`alter table "custom"."book2" add constraint "book2_author_id_foreign" foreign key ("author_id") references "custom"."author2" ("id");\`);
    this.addSql(\`alter table "custom"."book2" add constraint "book2_publisher_id_foreign" foreign key ("publisher_id") references "custom"."publisher2" ("id") on update cascade on delete cascade;\`);

    this.addSql(\`alter table "custom"."book2_tags" add constraint "book2_tags_book2_uuid_pk_foreign" foreign key ("book2_uuid_pk") references "custom"."book2" ("uuid_pk") on update cascade on delete cascade;\`);
    this.addSql(\`alter table "custom"."book2_tags" add constraint "book2_tags_book_tag2_id_foreign" foreign key ("book_tag2_id") references "custom"."book_tag2" ("id") on update cascade on delete cascade;\`);

    this.addSql(\`alter table "custom"."book_to_tag_unordered" add constraint "book_to_tag_unordered_book2_uuid_pk_foreign" foreign key ("book2_uuid_pk") references "custom"."book2" ("uuid_pk") on update cascade on delete cascade;\`);
    this.addSql(\`alter table "custom"."book_to_tag_unordered" add constraint "book_to_tag_unordered_book_tag2_id_foreign" foreign key ("book_tag2_id") references "custom"."book_tag2" ("id") on update cascade on delete cascade;\`);

    this.addSql(\`alter table "custom"."author2_following" add constraint "author2_following_author2_1_id_foreign" foreign key ("author2_1_id") references "custom"."author2" ("id") on update cascade on delete cascade;\`);
    this.addSql(\`alter table "custom"."author2_following" add constraint "author2_following_author2_2_id_foreign" foreign key ("author2_2_id") references "custom"."author2" ("id") on update cascade on delete cascade;\`);

    this.addSql(\`alter table "custom"."author_to_friend" add constraint "author_to_friend_author2_1_id_foreign" foreign key ("author2_1_id") references "custom"."author2" ("id") on update cascade on delete cascade;\`);
    this.addSql(\`alter table "custom"."author_to_friend" add constraint "author_to_friend_author2_2_id_foreign" foreign key ("author2_2_id") references "custom"."author2" ("id") on update cascade on delete cascade;\`);

    this.addSql(\`alter table "custom"."address2" add constraint "address2_author_id_foreign" foreign key ("author_id") references "custom"."author2" ("id") on update cascade on delete cascade;\`);

    this.addSql(\`alter table "custom"."test2" add constraint "test2_book_uuid_pk_foreign" foreign key ("book_uuid_pk") references "custom"."book2" ("uuid_pk") on delete set null;\`);
    this.addSql(\`alter table "custom"."test2" add constraint "test2_parent_id_foreign" foreign key ("parent_id") references "custom"."test2" ("id") on update cascade on delete set null;\`);

    this.addSql(\`alter table "custom"."publisher2_tests" add constraint "publisher2_tests_publisher2_id_foreign" foreign key ("publisher2_id") references "custom"."publisher2" ("id") on update cascade on delete cascade;\`);
    this.addSql(\`alter table "custom"."publisher2_tests" add constraint "publisher2_tests_test2_id_foreign" foreign key ("test2_id") references "custom"."test2" ("id") on update cascade on delete cascade;\`);

    this.addSql(\`alter table "custom"."configuration2" add constraint "configuration2_test_id_foreign" foreign key ("test_id") references "custom"."test2" ("id") on update cascade;\`);

    this.addSql(\`alter table "custom"."test2_bars" add constraint "test2_bars_test2_id_foreign" foreign key ("test2_id") references "custom"."test2" ("id") on update cascade on delete cascade;\`);
    this.addSql(\`alter table "custom"."test2_bars" add constraint "test2_bars_foo_bar2_id_foreign" foreign key ("foo_bar2_id") references "custom"."foo_bar2" ("id") on update cascade on delete cascade;\`);
  }

}
",
  "diff": {
    "down": [],
    "up": [
      "create schema if not exists "custom";",
      "create table "custom"."book_tag2" ("id" bigserial primary key, "name" varchar(50) not null);",
      "",
      "create table "custom"."foo_baz2" ("id" serial primary key, "name" varchar(255) not null, "code" varchar(255) not null, "version" timestamptz(3) not null default current_timestamp(3));",
      "",
      "create table "custom"."foo_bar2" ("id" serial primary key, "name" varchar(255) not null, "name with space" varchar(255) null, "baz_id" int null, "foo_bar_id" int null, "version" timestamptz(0) not null default current_timestamp(0), "blob" bytea null, "blob2" bytea null, "array" text[] null, "object_property" jsonb null);",
      "alter table "custom"."foo_bar2" add constraint "foo_bar2_baz_id_unique" unique ("baz_id");",
      "alter table "custom"."foo_bar2" add constraint "foo_bar2_foo_bar_id_unique" unique ("foo_bar_id");",
      "",
      "create table "custom"."foo_param2" ("bar_id" int not null, "baz_id" int not null, "value" varchar(255) not null, "version" timestamptz(3) not null default current_timestamp(3), primary key ("bar_id", "baz_id"));",
      "",
      "create table "custom"."publisher2" ("id" serial primary key, "name" varchar(255) not null default 'asd', "type" text not null default 'local', "type2" text not null default 'LOCAL', "enum1" smallint null, "enum2" smallint null, "enum3" smallint null, "enum4" text null, "enum5" text null);",
      "alter table "custom"."publisher2" add constraint "publisher2_type_check" check ("type" in ('local', 'global'));",
      "alter table "custom"."publisher2" add constraint "publisher2_type2_check" check ("type2" in ('LOCAL', 'GLOBAL'));",
      "alter table "custom"."publisher2" add constraint "publisher2_enum4_check" check ("enum4" in ('a', 'b', 'c'));",
      "alter table "custom"."publisher2" add constraint "publisher2_enum5_check" check ("enum5" in ('a'));",
      "",
      "create table "custom"."author2" ("id" serial primary key, "created_at" timestamptz(3) not null default current_timestamp(3), "updated_at" timestamptz(3) not null default current_timestamp(3), "name" varchar(255) not null, "email" varchar(255) not null, "age" int null, "terms_accepted" boolean not null default false, "optional" boolean null, "identities" text[] null, "born" date null, "born_time" time(0) null, "favourite_book_uuid_pk" uuid null, "favourite_author_id" int null, "identity" jsonb null);",
      "create index "custom_email_index_name" on "custom"."author2" ("email");",
      "alter table "custom"."author2" add constraint "custom_email_unique_name" unique ("email");",
      "create index "author2_terms_accepted_index" on "custom"."author2" ("terms_accepted");",
      "create index "author2_born_index" on "custom"."author2" ("born");",
      "create index "born_time_idx" on "custom"."author2" ("born_time");",
      "create index "custom_idx_name_123" on "custom"."author2" ("name");",
      "create index "author2_name_age_index" on "custom"."author2" ("name", "age");",
      "alter table "custom"."author2" add constraint "author2_name_email_unique" unique ("name", "email");",
      "",
      "create table "custom"."book2" ("uuid_pk" uuid not null, "created_at" timestamptz(3) not null default current_timestamp(3), "isbn" char(13) null, "title" varchar(255) null default '', "perex" text null, "price" numeric(8,2) null, "double" double precision null, "meta" jsonb null, "author_id" int not null, "publisher_id" int null, primary key ("uuid_pk"));",
      "alter table "custom"."book2" add constraint "book2_isbn_unique" unique ("isbn");",
      "create index "book2_title_index" on "custom"."book2" using gin(to_tsvector('simple', "title"));",
      "",
      "create table "custom"."book2_tags" ("order" serial primary key, "book2_uuid_pk" uuid not null, "book_tag2_id" bigint not null);",
      "",
      "create table "custom"."book_to_tag_unordered" ("book2_uuid_pk" uuid not null, "book_tag2_id" bigint not null, primary key ("book2_uuid_pk", "book_tag2_id"));",
      "",
      "create table "custom"."author2_following" ("author2_1_id" int not null, "author2_2_id" int not null, primary key ("author2_1_id", "author2_2_id"));",
      "",
      "create table "custom"."author_to_friend" ("author2_1_id" int not null, "author2_2_id" int not null, primary key ("author2_1_id", "author2_2_id"));",
      "",
      "create table "custom"."address2" ("author_id" int not null, "value" varchar(255) not null, primary key ("author_id"));",
      "comment on table "custom"."address2" is 'This is address table';",
      "comment on column "custom"."address2"."value" is 'This is address property';",
      "",
      "create table "custom"."test2" ("id" serial primary key, "name" varchar(255) null, "book_uuid_pk" uuid null, "parent_id" int null, "version" int not null default 1);",
      "alter table "custom"."test2" add constraint "test2_book_uuid_pk_unique" unique ("book_uuid_pk");",
      "",
      "create table "custom"."publisher2_tests" ("id" serial primary key, "publisher2_id" int not null, "test2_id" int not null);",
      "",
      "create table "custom"."configuration2" ("property" varchar(255) not null, "test_id" int not null, "value" varchar(255) not null, primary key ("property", "test_id"));",
      "",
      "create table "custom"."test2_bars" ("test2_id" int not null, "foo_bar2_id" int not null, primary key ("test2_id", "foo_bar2_id"));",
      "",
      "alter table "custom"."foo_bar2" add constraint "foo_bar2_baz_id_foreign" foreign key ("baz_id") references "custom"."foo_baz2" ("id") on update cascade on delete set null;",
      "alter table "custom"."foo_bar2" add constraint "foo_bar2_foo_bar_id_foreign" foreign key ("foo_bar_id") references "custom"."foo_bar2" ("id") on update cascade on delete set null;",
      "",
      "alter table "custom"."foo_param2" add constraint "foo_param2_bar_id_foreign" foreign key ("bar_id") references "custom"."foo_bar2" ("id") on update cascade;",
      "alter table "custom"."foo_param2" add constraint "foo_param2_baz_id_foreign" foreign key ("baz_id") references "custom"."foo_baz2" ("id") on update cascade;",
      "",
      "alter table "custom"."author2" add constraint "author2_favourite_book_uuid_pk_foreign" foreign key ("favourite_book_uuid_pk") references "custom"."book2" ("uuid_pk") on update no action on delete cascade;",
      "alter table "custom"."author2" add constraint "author2_favourite_author_id_foreign" foreign key ("favourite_author_id") references "custom"."author2" ("id") on update cascade on delete set null;",
      "",
      "alter table "custom"."book2" add constraint "book2_author_id_foreign" foreign key ("author_id") references "custom"."author2" ("id");",
      "alter table "custom"."book2" add constraint "book2_publisher_id_foreign" foreign key ("publisher_id") references "custom"."publisher2" ("id") on update cascade on delete cascade;",
      "",
      "alter table "custom"."book2_tags" add constraint "book2_tags_book2_uuid_pk_foreign" foreign key ("book2_uuid_pk") references "custom"."book2" ("uuid_pk") on update cascade on delete cascade;",
      "alter table "custom"."book2_tags" add constraint "book2_tags_book_tag2_id_foreign" foreign key ("book_tag2_id") references "custom"."book_tag2" ("id") on update cascade on delete cascade;",
      "",
      "alter table "custom"."book_to_tag_unordered" add constraint "book_to_tag_unordered_book2_uuid_pk_foreign" foreign key ("book2_uuid_pk") references "custom"."book2" ("uuid_pk") on update cascade on delete cascade;",
      "alter table "custom"."book_to_tag_unordered" add constraint "book_to_tag_unordered_book_tag2_id_foreign" foreign key ("book_tag2_id") references "custom"."book_tag2" ("id") on update cascade on delete cascade;",
      "",
      "alter table "custom"."author2_following" add constraint "author2_following_author2_1_id_foreign" foreign key ("author2_1_id") references "custom"."author2" ("id") on update cascade on delete cascade;",
      "alter table "custom"."author2_following" add constraint "author2_following_author2_2_id_foreign" foreign key ("author2_2_id") references "custom"."author2" ("id") on update cascade on delete cascade;",
      "",
      "alter table "custom"."author_to_friend" add constraint "author_to_friend_author2_1_id_foreign" foreign key ("author2_1_id") references "custom"."author2" ("id") on update cascade on delete cascade;",
      "alter table "custom"."author_to_friend" add constraint "author_to_friend_author2_2_id_foreign" foreign key ("author2_2_id") references "custom"."author2" ("id") on update cascade on delete cascade;",
      "",
      "alter table "custom"."address2" add constraint "address2_author_id_foreign" foreign key ("author_id") references "custom"."author2" ("id") on update cascade on delete cascade;",
      "",
      "alter table "custom"."test2" add constraint "test2_book_uuid_pk_foreign" foreign key ("book_uuid_pk") references "custom"."book2" ("uuid_pk") on delete set null;",
      "alter table "custom"."test2" add constraint "test2_parent_id_foreign" foreign key ("parent_id") references "custom"."test2" ("id") on update cascade on delete set null;",
      "",
      "alter table "custom"."publisher2_tests" add constraint "publisher2_tests_publisher2_id_foreign" foreign key ("publisher2_id") references "custom"."publisher2" ("id") on update cascade on delete cascade;",
      "alter table "custom"."publisher2_tests" add constraint "publisher2_tests_test2_id_foreign" foreign key ("test2_id") references "custom"."test2" ("id") on update cascade on delete cascade;",
      "",
      "alter table "custom"."configuration2" add constraint "configuration2_test_id_foreign" foreign key ("test_id") references "custom"."test2" ("id") on update cascade;",
      "",
      "alter table "custom"."test2_bars" add constraint "test2_bars_test2_id_foreign" foreign key ("test2_id") references "custom"."test2" ("id") on update cascade on delete cascade;",
      "alter table "custom"."test2_bars" add constraint "test2_bars_foo_bar2_id_foreign" foreign key ("foo_bar2_id") references "custom"."foo_bar2" ("id") on update cascade on delete cascade;",
    ],
  },
  "fileName": "Migration20191013214813.ts",
}
`;

exports[`Migrator (postgres) generate initial migration: initial-migration-dump 2`] = `
{
  "code": "import { Migration } from '@mikro-orm/migrations';

export class Migration20191013214813 extends Migration {

  override async up(): Promise<void> {
    this.addSql(\`create schema if not exists "custom";\`);
    this.addSql(\`create table "custom"."book_tag2" ("id" bigserial primary key, "name" varchar(50) not null);\`);

    this.addSql(\`create table "custom"."foo_baz2" ("id" serial primary key, "name" varchar(255) not null, "code" varchar(255) not null, "version" timestamptz(3) not null default current_timestamp(3));\`);

    this.addSql(\`create table "custom"."foo_bar2" ("id" serial primary key, "name" varchar(255) not null, "name with space" varchar(255) null, "baz_id" int null, "foo_bar_id" int null, "version" timestamptz(0) not null default current_timestamp(0), "blob" bytea null, "blob2" bytea null, "array" text[] null, "object_property" jsonb null);\`);
    this.addSql(\`alter table "custom"."foo_bar2" add constraint "foo_bar2_baz_id_unique" unique ("baz_id");\`);
    this.addSql(\`alter table "custom"."foo_bar2" add constraint "foo_bar2_foo_bar_id_unique" unique ("foo_bar_id");\`);

    this.addSql(\`create table "custom"."foo_param2" ("bar_id" int not null, "baz_id" int not null, "value" varchar(255) not null, "version" timestamptz(3) not null default current_timestamp(3), primary key ("bar_id", "baz_id"));\`);

    this.addSql(\`create table "custom"."publisher2" ("id" serial primary key, "name" varchar(255) not null default 'asd', "type" text not null default 'local', "type2" text not null default 'LOCAL', "enum1" smallint null, "enum2" smallint null, "enum3" smallint null, "enum4" text null, "enum5" text null);\`);
    this.addSql(\`alter table "custom"."publisher2" add constraint "publisher2_type_check" check ("type" in ('local', 'global'));\`);
    this.addSql(\`alter table "custom"."publisher2" add constraint "publisher2_type2_check" check ("type2" in ('LOCAL', 'GLOBAL'));\`);
    this.addSql(\`alter table "custom"."publisher2" add constraint "publisher2_enum4_check" check ("enum4" in ('a', 'b', 'c'));\`);
    this.addSql(\`alter table "custom"."publisher2" add constraint "publisher2_enum5_check" check ("enum5" in ('a'));\`);

    this.addSql(\`create table "custom"."author2" ("id" serial primary key, "created_at" timestamptz(3) not null default current_timestamp(3), "updated_at" timestamptz(3) not null default current_timestamp(3), "name" varchar(255) not null, "email" varchar(255) not null, "age" int null, "terms_accepted" boolean not null default false, "optional" boolean null, "identities" text[] null, "born" date null, "born_time" time(0) null, "favourite_book_uuid_pk" uuid null, "favourite_author_id" int null, "identity" jsonb null);\`);
    this.addSql(\`create index "custom_email_index_name" on "custom"."author2" ("email");\`);
    this.addSql(\`alter table "custom"."author2" add constraint "custom_email_unique_name" unique ("email");\`);
    this.addSql(\`create index "author2_terms_accepted_index" on "custom"."author2" ("terms_accepted");\`);
    this.addSql(\`create index "author2_born_index" on "custom"."author2" ("born");\`);
    this.addSql(\`create index "born_time_idx" on "custom"."author2" ("born_time");\`);
    this.addSql(\`create index "custom_idx_name_123" on "custom"."author2" ("name");\`);
    this.addSql(\`create index "author2_name_age_index" on "custom"."author2" ("name", "age");\`);
    this.addSql(\`alter table "custom"."author2" add constraint "author2_name_email_unique" unique ("name", "email");\`);

    this.addSql(\`create table "custom"."book2" ("uuid_pk" uuid not null, "created_at" timestamptz(3) not null default current_timestamp(3), "isbn" char(13) null, "title" varchar(255) null default '', "perex" text null, "price" numeric(8,2) null, "double" double precision null, "meta" jsonb null, "author_id" int not null, "publisher_id" int null, primary key ("uuid_pk"));\`);
    this.addSql(\`alter table "custom"."book2" add constraint "book2_isbn_unique" unique ("isbn");\`);
    this.addSql(\`create index "book2_title_index" on "custom"."book2" using gin(to_tsvector('simple', "title"));\`);

    this.addSql(\`create table "custom"."book2_tags" ("order" serial primary key, "book2_uuid_pk" uuid not null, "book_tag2_id" bigint not null);\`);

    this.addSql(\`create table "custom"."book_to_tag_unordered" ("book2_uuid_pk" uuid not null, "book_tag2_id" bigint not null, primary key ("book2_uuid_pk", "book_tag2_id"));\`);

    this.addSql(\`create table "custom"."author2_following" ("author2_1_id" int not null, "author2_2_id" int not null, primary key ("author2_1_id", "author2_2_id"));\`);

    this.addSql(\`create table "custom"."author_to_friend" ("author2_1_id" int not null, "author2_2_id" int not null, primary key ("author2_1_id", "author2_2_id"));\`);

    this.addSql(\`create table "custom"."address2" ("author_id" int not null, "value" varchar(255) not null, primary key ("author_id"));\`);
    this.addSql(\`comment on table "custom"."address2" is 'This is address table';\`);
    this.addSql(\`comment on column "custom"."address2"."value" is 'This is address property';\`);

    this.addSql(\`create table "custom"."test2" ("id" serial primary key, "name" varchar(255) null, "book_uuid_pk" uuid null, "parent_id" int null, "version" int not null default 1);\`);
    this.addSql(\`alter table "custom"."test2" add constraint "test2_book_uuid_pk_unique" unique ("book_uuid_pk");\`);

    this.addSql(\`create table "custom"."publisher2_tests" ("id" serial primary key, "publisher2_id" int not null, "test2_id" int not null);\`);

    this.addSql(\`create table "custom"."configuration2" ("property" varchar(255) not null, "test_id" int not null, "value" varchar(255) not null, primary key ("property", "test_id"));\`);

    this.addSql(\`create table "custom"."test2_bars" ("test2_id" int not null, "foo_bar2_id" int not null, primary key ("test2_id", "foo_bar2_id"));\`);

    this.addSql(\`alter table "custom"."foo_bar2" add constraint "foo_bar2_baz_id_foreign" foreign key ("baz_id") references "custom"."foo_baz2" ("id") on update cascade on delete set null;\`);
    this.addSql(\`alter table "custom"."foo_bar2" add constraint "foo_bar2_foo_bar_id_foreign" foreign key ("foo_bar_id") references "custom"."foo_bar2" ("id") on update cascade on delete set null;\`);

    this.addSql(\`alter table "custom"."foo_param2" add constraint "foo_param2_bar_id_foreign" foreign key ("bar_id") references "custom"."foo_bar2" ("id") on update cascade;\`);
    this.addSql(\`alter table "custom"."foo_param2" add constraint "foo_param2_baz_id_foreign" foreign key ("baz_id") references "custom"."foo_baz2" ("id") on update cascade;\`);

    this.addSql(\`alter table "custom"."author2" add constraint "author2_favourite_book_uuid_pk_foreign" foreign key ("favourite_book_uuid_pk") references "custom"."book2" ("uuid_pk") on update no action on delete cascade;\`);
    this.addSql(\`alter table "custom"."author2" add constraint "author2_favourite_author_id_foreign" foreign key ("favourite_author_id") references "custom"."author2" ("id") on update cascade on delete set null;\`);

    this.addSql(\`alter table "custom"."book2" add constraint "book2_author_id_foreign" foreign key ("author_id") references "custom"."author2" ("id");\`);
    this.addSql(\`alter table "custom"."book2" add constraint "book2_publisher_id_foreign" foreign key ("publisher_id") references "custom"."publisher2" ("id") on update cascade on delete cascade;\`);

    this.addSql(\`alter table "custom"."book2_tags" add constraint "book2_tags_book2_uuid_pk_foreign" foreign key ("book2_uuid_pk") references "custom"."book2" ("uuid_pk") on update cascade on delete cascade;\`);
    this.addSql(\`alter table "custom"."book2_tags" add constraint "book2_tags_book_tag2_id_foreign" foreign key ("book_tag2_id") references "custom"."book_tag2" ("id") on update cascade on delete cascade;\`);

    this.addSql(\`alter table "custom"."book_to_tag_unordered" add constraint "book_to_tag_unordered_book2_uuid_pk_foreign" foreign key ("book2_uuid_pk") references "custom"."book2" ("uuid_pk") on update cascade on delete cascade;\`);
    this.addSql(\`alter table "custom"."book_to_tag_unordered" add constraint "book_to_tag_unordered_book_tag2_id_foreign" foreign key ("book_tag2_id") references "custom"."book_tag2" ("id") on update cascade on delete cascade;\`);

    this.addSql(\`alter table "custom"."author2_following" add constraint "author2_following_author2_1_id_foreign" foreign key ("author2_1_id") references "custom"."author2" ("id") on update cascade on delete cascade;\`);
    this.addSql(\`alter table "custom"."author2_following" add constraint "author2_following_author2_2_id_foreign" foreign key ("author2_2_id") references "custom"."author2" ("id") on update cascade on delete cascade;\`);

    this.addSql(\`alter table "custom"."author_to_friend" add constraint "author_to_friend_author2_1_id_foreign" foreign key ("author2_1_id") references "custom"."author2" ("id") on update cascade on delete cascade;\`);
    this.addSql(\`alter table "custom"."author_to_friend" add constraint "author_to_friend_author2_2_id_foreign" foreign key ("author2_2_id") references "custom"."author2" ("id") on update cascade on delete cascade;\`);

    this.addSql(\`alter table "custom"."address2" add constraint "address2_author_id_foreign" foreign key ("author_id") references "custom"."author2" ("id") on update cascade on delete cascade;\`);

    this.addSql(\`alter table "custom"."test2" add constraint "test2_book_uuid_pk_foreign" foreign key ("book_uuid_pk") references "custom"."book2" ("uuid_pk") on delete set null;\`);
    this.addSql(\`alter table "custom"."test2" add constraint "test2_parent_id_foreign" foreign key ("parent_id") references "custom"."test2" ("id") on update cascade on delete set null;\`);

    this.addSql(\`alter table "custom"."publisher2_tests" add constraint "publisher2_tests_publisher2_id_foreign" foreign key ("publisher2_id") references "custom"."publisher2" ("id") on update cascade on delete cascade;\`);
    this.addSql(\`alter table "custom"."publisher2_tests" add constraint "publisher2_tests_test2_id_foreign" foreign key ("test2_id") references "custom"."test2" ("id") on update cascade on delete cascade;\`);

    this.addSql(\`alter table "custom"."configuration2" add constraint "configuration2_test_id_foreign" foreign key ("test_id") references "custom"."test2" ("id") on update cascade;\`);

    this.addSql(\`alter table "custom"."test2_bars" add constraint "test2_bars_test2_id_foreign" foreign key ("test2_id") references "custom"."test2" ("id") on update cascade on delete cascade;\`);
    this.addSql(\`alter table "custom"."test2_bars" add constraint "test2_bars_foo_bar2_id_foreign" foreign key ("foo_bar2_id") references "custom"."foo_bar2" ("id") on update cascade on delete cascade;\`);
  }

}
",
  "diff": {
    "down": [],
    "up": [
      "create schema if not exists "custom";",
      "create table "custom"."book_tag2" ("id" bigserial primary key, "name" varchar(50) not null);",
      "",
      "create table "custom"."foo_baz2" ("id" serial primary key, "name" varchar(255) not null, "code" varchar(255) not null, "version" timestamptz(3) not null default current_timestamp(3));",
      "",
      "create table "custom"."foo_bar2" ("id" serial primary key, "name" varchar(255) not null, "name with space" varchar(255) null, "baz_id" int null, "foo_bar_id" int null, "version" timestamptz(0) not null default current_timestamp(0), "blob" bytea null, "blob2" bytea null, "array" text[] null, "object_property" jsonb null);",
      "alter table "custom"."foo_bar2" add constraint "foo_bar2_baz_id_unique" unique ("baz_id");",
      "alter table "custom"."foo_bar2" add constraint "foo_bar2_foo_bar_id_unique" unique ("foo_bar_id");",
      "",
      "create table "custom"."foo_param2" ("bar_id" int not null, "baz_id" int not null, "value" varchar(255) not null, "version" timestamptz(3) not null default current_timestamp(3), primary key ("bar_id", "baz_id"));",
      "",
      "create table "custom"."publisher2" ("id" serial primary key, "name" varchar(255) not null default 'asd', "type" text not null default 'local', "type2" text not null default 'LOCAL', "enum1" smallint null, "enum2" smallint null, "enum3" smallint null, "enum4" text null, "enum5" text null);",
      "alter table "custom"."publisher2" add constraint "publisher2_type_check" check ("type" in ('local', 'global'));",
      "alter table "custom"."publisher2" add constraint "publisher2_type2_check" check ("type2" in ('LOCAL', 'GLOBAL'));",
      "alter table "custom"."publisher2" add constraint "publisher2_enum4_check" check ("enum4" in ('a', 'b', 'c'));",
      "alter table "custom"."publisher2" add constraint "publisher2_enum5_check" check ("enum5" in ('a'));",
      "",
      "create table "custom"."author2" ("id" serial primary key, "created_at" timestamptz(3) not null default current_timestamp(3), "updated_at" timestamptz(3) not null default current_timestamp(3), "name" varchar(255) not null, "email" varchar(255) not null, "age" int null, "terms_accepted" boolean not null default false, "optional" boolean null, "identities" text[] null, "born" date null, "born_time" time(0) null, "favourite_book_uuid_pk" uuid null, "favourite_author_id" int null, "identity" jsonb null);",
      "create index "custom_email_index_name" on "custom"."author2" ("email");",
      "alter table "custom"."author2" add constraint "custom_email_unique_name" unique ("email");",
      "create index "author2_terms_accepted_index" on "custom"."author2" ("terms_accepted");",
      "create index "author2_born_index" on "custom"."author2" ("born");",
      "create index "born_time_idx" on "custom"."author2" ("born_time");",
      "create index "custom_idx_name_123" on "custom"."author2" ("name");",
      "create index "author2_name_age_index" on "custom"."author2" ("name", "age");",
      "alter table "custom"."author2" add constraint "author2_name_email_unique" unique ("name", "email");",
      "",
      "create table "custom"."book2" ("uuid_pk" uuid not null, "created_at" timestamptz(3) not null default current_timestamp(3), "isbn" char(13) null, "title" varchar(255) null default '', "perex" text null, "price" numeric(8,2) null, "double" double precision null, "meta" jsonb null, "author_id" int not null, "publisher_id" int null, primary key ("uuid_pk"));",
      "alter table "custom"."book2" add constraint "book2_isbn_unique" unique ("isbn");",
      "create index "book2_title_index" on "custom"."book2" using gin(to_tsvector('simple', "title"));",
      "",
      "create table "custom"."book2_tags" ("order" serial primary key, "book2_uuid_pk" uuid not null, "book_tag2_id" bigint not null);",
      "",
      "create table "custom"."book_to_tag_unordered" ("book2_uuid_pk" uuid not null, "book_tag2_id" bigint not null, primary key ("book2_uuid_pk", "book_tag2_id"));",
      "",
      "create table "custom"."author2_following" ("author2_1_id" int not null, "author2_2_id" int not null, primary key ("author2_1_id", "author2_2_id"));",
      "",
      "create table "custom"."author_to_friend" ("author2_1_id" int not null, "author2_2_id" int not null, primary key ("author2_1_id", "author2_2_id"));",
      "",
      "create table "custom"."address2" ("author_id" int not null, "value" varchar(255) not null, primary key ("author_id"));",
      "comment on table "custom"."address2" is 'This is address table';",
      "comment on column "custom"."address2"."value" is 'This is address property';",
      "",
      "create table "custom"."test2" ("id" serial primary key, "name" varchar(255) null, "book_uuid_pk" uuid null, "parent_id" int null, "version" int not null default 1);",
      "alter table "custom"."test2" add constraint "test2_book_uuid_pk_unique" unique ("book_uuid_pk");",
      "",
      "create table "custom"."publisher2_tests" ("id" serial primary key, "publisher2_id" int not null, "test2_id" int not null);",
      "",
      "create table "custom"."configuration2" ("property" varchar(255) not null, "test_id" int not null, "value" varchar(255) not null, primary key ("property", "test_id"));",
      "",
      "create table "custom"."test2_bars" ("test2_id" int not null, "foo_bar2_id" int not null, primary key ("test2_id", "foo_bar2_id"));",
      "",
      "alter table "custom"."foo_bar2" add constraint "foo_bar2_baz_id_foreign" foreign key ("baz_id") references "custom"."foo_baz2" ("id") on update cascade on delete set null;",
      "alter table "custom"."foo_bar2" add constraint "foo_bar2_foo_bar_id_foreign" foreign key ("foo_bar_id") references "custom"."foo_bar2" ("id") on update cascade on delete set null;",
      "",
      "alter table "custom"."foo_param2" add constraint "foo_param2_bar_id_foreign" foreign key ("bar_id") references "custom"."foo_bar2" ("id") on update cascade;",
      "alter table "custom"."foo_param2" add constraint "foo_param2_baz_id_foreign" foreign key ("baz_id") references "custom"."foo_baz2" ("id") on update cascade;",
      "",
      "alter table "custom"."author2" add constraint "author2_favourite_book_uuid_pk_foreign" foreign key ("favourite_book_uuid_pk") references "custom"."book2" ("uuid_pk") on update no action on delete cascade;",
      "alter table "custom"."author2" add constraint "author2_favourite_author_id_foreign" foreign key ("favourite_author_id") references "custom"."author2" ("id") on update cascade on delete set null;",
      "",
      "alter table "custom"."book2" add constraint "book2_author_id_foreign" foreign key ("author_id") references "custom"."author2" ("id");",
      "alter table "custom"."book2" add constraint "book2_publisher_id_foreign" foreign key ("publisher_id") references "custom"."publisher2" ("id") on update cascade on delete cascade;",
      "",
      "alter table "custom"."book2_tags" add constraint "book2_tags_book2_uuid_pk_foreign" foreign key ("book2_uuid_pk") references "custom"."book2" ("uuid_pk") on update cascade on delete cascade;",
      "alter table "custom"."book2_tags" add constraint "book2_tags_book_tag2_id_foreign" foreign key ("book_tag2_id") references "custom"."book_tag2" ("id") on update cascade on delete cascade;",
      "",
      "alter table "custom"."book_to_tag_unordered" add constraint "book_to_tag_unordered_book2_uuid_pk_foreign" foreign key ("book2_uuid_pk") references "custom"."book2" ("uuid_pk") on update cascade on delete cascade;",
      "alter table "custom"."book_to_tag_unordered" add constraint "book_to_tag_unordered_book_tag2_id_foreign" foreign key ("book_tag2_id") references "custom"."book_tag2" ("id") on update cascade on delete cascade;",
      "",
      "alter table "custom"."author2_following" add constraint "author2_following_author2_1_id_foreign" foreign key ("author2_1_id") references "custom"."author2" ("id") on update cascade on delete cascade;",
      "alter table "custom"."author2_following" add constraint "author2_following_author2_2_id_foreign" foreign key ("author2_2_id") references "custom"."author2" ("id") on update cascade on delete cascade;",
      "",
      "alter table "custom"."author_to_friend" add constraint "author_to_friend_author2_1_id_foreign" foreign key ("author2_1_id") references "custom"."author2" ("id") on update cascade on delete cascade;",
      "alter table "custom"."author_to_friend" add constraint "author_to_friend_author2_2_id_foreign" foreign key ("author2_2_id") references "custom"."author2" ("id") on update cascade on delete cascade;",
      "",
      "alter table "custom"."address2" add constraint "address2_author_id_foreign" foreign key ("author_id") references "custom"."author2" ("id") on update cascade on delete cascade;",
      "",
      "alter table "custom"."test2" add constraint "test2_book_uuid_pk_foreign" foreign key ("book_uuid_pk") references "custom"."book2" ("uuid_pk") on delete set null;",
      "alter table "custom"."test2" add constraint "test2_parent_id_foreign" foreign key ("parent_id") references "custom"."test2" ("id") on update cascade on delete set null;",
      "",
      "alter table "custom"."publisher2_tests" add constraint "publisher2_tests_publisher2_id_foreign" foreign key ("publisher2_id") references "custom"."publisher2" ("id") on update cascade on delete cascade;",
      "alter table "custom"."publisher2_tests" add constraint "publisher2_tests_test2_id_foreign" foreign key ("test2_id") references "custom"."test2" ("id") on update cascade on delete cascade;",
      "",
      "alter table "custom"."configuration2" add constraint "configuration2_test_id_foreign" foreign key ("test_id") references "custom"."test2" ("id") on update cascade;",
      "",
      "alter table "custom"."test2_bars" add constraint "test2_bars_test2_id_foreign" foreign key ("test2_id") references "custom"."test2" ("id") on update cascade on delete cascade;",
      "alter table "custom"."test2_bars" add constraint "test2_bars_foo_bar2_id_foreign" foreign key ("foo_bar2_id") references "custom"."foo_bar2" ("id") on update cascade on delete cascade;",
    ],
  },
  "fileName": "Migration20191013214813.ts",
}
`;

exports[`Migrator (postgres) generate js schema migration: migration-js-dump 1`] = `
{
  "code": "'use strict';
Object.defineProperty(exports, '__esModule', { value: true });
const { Migration } = require('@mikro-orm/migrations');

class Migration20191013214813 extends Migration {

  async up() {
    this.addSql(\`alter table "custom"."book2" drop column "foo";\`);
    this.addSql(\`alter table "custom"."book2" alter column "double" type double precision using ("double"::double precision);\`);

    this.addSql(\`alter table "custom"."test2" drop column "path";\`);
  }

  async down() {
    this.addSql(\`alter table "custom"."book2" add "foo" varchar null default 'lol';\`);
    this.addSql(\`alter table "custom"."book2" alter column "double" type numeric using ("double"::numeric);\`);

    this.addSql(\`alter table "custom"."test2" add "path" polygon null;\`);
  }

}
exports.Migration20191013214813 = Migration20191013214813;
",
  "diff": {
    "down": [
      "alter table "custom"."book2" add "foo" varchar null default 'lol';",
      "alter table "custom"."book2" alter column "double" type numeric using ("double"::numeric);",
      "",
      "alter table "custom"."test2" add "path" polygon null;",
    ],
    "up": [
      "alter table "custom"."book2" drop column "foo";",
      "alter table "custom"."book2" alter column "double" type double precision using ("double"::double precision);",
      "",
      "alter table "custom"."test2" drop column "path";",
    ],
  },
  "fileName": "Migration20191013214813.js",
}
`;

exports[`Migrator (postgres) generate migration with custom migrator: migration-ts-dump 1`] = `
{
  "code": "// this file was generated via custom migration generator

import { Migration } from '@mikro-orm/migrations';

export class Migration20191013214813 extends Migration {

  override async up(): Promise<void> {
    this.addSql(\`alter table "custom"."book2" drop column "foo";\`);
    this.addSql(\`alter table "custom"."book2" alter column "double" type double precision using ("double"::double precision);\`);

    this.addSql(\`alter table "custom"."test2" drop column "path";\`);
  }

  override async down(): Promise<void> {
    this.addSql(\`alter table "custom"."book2" add "foo" varchar null default 'lol';\`);
    this.addSql(\`alter table "custom"."book2" alter column "double" type numeric using ("double"::numeric);\`);

    this.addSql(\`alter table "custom"."test2" add "path" polygon null;\`);
  }

}
",
  "diff": {
    "down": [
      "alter table "custom"."book2" add "foo" varchar null default 'lol';",
      "alter table "custom"."book2" alter column "double" type numeric using ("double"::numeric);",
      "",
      "alter table "custom"."test2" add "path" polygon null;",
    ],
    "up": [
      "alter table "custom"."book2" drop column "foo";",
      "alter table "custom"."book2" alter column "double" type double precision using ("double"::double precision);",
      "",
      "alter table "custom"."test2" drop column "path";",
    ],
  },
  "fileName": "Migration20191013214813.ts",
}
`;

exports[`Migrator (postgres) generate migration with custom name with name option: migration-dump 1`] = `
{
  "code": "import { Migration } from '@mikro-orm/migrations';

export class Migration20191013214813_custom_name extends Migration {

  override async up(): Promise<void> {
    this.addSql(\`alter table "custom"."book2" drop column "foo";\`);
    this.addSql(\`alter table "custom"."book2" alter column "double" type double precision using ("double"::double precision);\`);

    this.addSql(\`alter table "custom"."test2" drop column "path";\`);
  }

  override async down(): Promise<void> {
    this.addSql(\`alter table "custom"."book2" add "foo" varchar null default 'lol';\`);
    this.addSql(\`alter table "custom"."book2" alter column "double" type numeric using ("double"::numeric);\`);

    this.addSql(\`alter table "custom"."test2" add "path" polygon null;\`);
  }

}
",
  "diff": {
    "down": [
      "alter table "custom"."book2" add "foo" varchar null default 'lol';",
      "alter table "custom"."book2" alter column "double" type numeric using ("double"::numeric);",
      "",
      "alter table "custom"."test2" add "path" polygon null;",
    ],
    "up": [
      "alter table "custom"."book2" drop column "foo";",
      "alter table "custom"."book2" alter column "double" type double precision using ("double"::double precision);",
      "",
      "alter table "custom"."test2" drop column "path";",
    ],
  },
  "fileName": "migration20191013214813_custom_name.ts",
}
`;

exports[`Migrator (postgres) generate migration with custom name: migration-dump 1`] = `
{
  "code": "import { Migration } from '@mikro-orm/migrations';

export class Migration20191013214813 extends Migration {

  override async up(): Promise<void> {
    this.addSql(\`alter table "custom"."book2" drop column "foo";\`);
    this.addSql(\`alter table "custom"."book2" alter column "double" type double precision using ("double"::double precision);\`);

    this.addSql(\`alter table "custom"."test2" drop column "path";\`);
  }

  override async down(): Promise<void> {
    this.addSql(\`alter table "custom"."book2" add "foo" varchar null default 'lol';\`);
    this.addSql(\`alter table "custom"."book2" alter column "double" type numeric using ("double"::numeric);\`);

    this.addSql(\`alter table "custom"."test2" add "path" polygon null;\`);
  }

}
",
  "diff": {
    "down": [
      "alter table "custom"."book2" add "foo" varchar null default 'lol';",
      "alter table "custom"."book2" alter column "double" type numeric using ("double"::numeric);",
      "",
      "alter table "custom"."test2" add "path" polygon null;",
    ],
    "up": [
      "alter table "custom"."book2" drop column "foo";",
      "alter table "custom"."book2" alter column "double" type double precision using ("double"::double precision);",
      "",
      "alter table "custom"."test2" drop column "path";",
    ],
  },
  "fileName": "migration-20191013214813.ts",
}
`;

exports[`Migrator (postgres) generate migration with snapshot: migration-snapshot-dump-1 1`] = `
{
  "code": "import { Migration } from '@mikro-orm/migrations';

export class Migration20191013214813 extends Migration {

  override async up(): Promise<void> {
    this.addSql(\`alter table "custom"."book2" drop column "foo";\`);
    this.addSql(\`alter table "custom"."book2" alter column "double" type double precision using ("double"::double precision);\`);

    this.addSql(\`alter table "custom"."test2" drop column "path";\`);
  }

  override async down(): Promise<void> {
    this.addSql(\`alter table "custom"."book2" add "foo" varchar null default 'lol';\`);
    this.addSql(\`alter table "custom"."book2" alter column "double" type numeric using ("double"::numeric);\`);

    this.addSql(\`alter table "custom"."test2" add "path" polygon null;\`);
  }

}
",
  "diff": {
    "down": [
      "alter table "custom"."book2" add "foo" varchar null default 'lol';",
      "alter table "custom"."book2" alter column "double" type numeric using ("double"::numeric);",
      "",
      "alter table "custom"."test2" add "path" polygon null;",
    ],
    "up": [
      "alter table "custom"."book2" drop column "foo";",
      "alter table "custom"."book2" alter column "double" type double precision using ("double"::double precision);",
      "",
      "alter table "custom"."test2" drop column "path";",
    ],
  },
  "fileName": "Migration20191013214813.ts",
}
`;

exports[`Migrator (postgres) generate migration with snapshot: migration-snapshot-dump-2 1`] = `
{
  "code": "",
  "diff": {
    "down": [],
    "up": [],
  },
  "fileName": "",
}
`;

exports[`Migrator (postgres) generate schema migration: migration-dump 1`] = `
{
  "code": "import { Migration } from '@mikro-orm/migrations';

export class Migration20191013214813 extends Migration {

  override async up(): Promise<void> {
    this.addSql(\`alter table "custom"."book2" drop column "foo";\`);
    this.addSql(\`alter table "custom"."book2" alter column "double" type double precision using ("double"::double precision);\`);

    this.addSql(\`alter table "custom"."test2" drop column "path";\`);
  }

  override async down(): Promise<void> {
    this.addSql(\`alter table "custom"."book2" add "foo" varchar null default 'lol';\`);
    this.addSql(\`alter table "custom"."book2" alter column "double" type numeric using ("double"::numeric);\`);

    this.addSql(\`alter table "custom"."test2" add "path" polygon null;\`);
  }

}
",
  "diff": {
    "down": [
      "alter table "custom"."book2" add "foo" varchar null default 'lol';",
      "alter table "custom"."book2" alter column "double" type numeric using ("double"::numeric);",
      "",
      "alter table "custom"."test2" add "path" polygon null;",
    ],
    "up": [
      "alter table "custom"."book2" drop column "foo";",
      "alter table "custom"."book2" alter column "double" type double precision using ("double"::double precision);",
      "",
      "alter table "custom"."test2" drop column "path";",
    ],
  },
  "fileName": "Migration20191013214813.ts",
}
`;

exports[`Migrator (postgres) up/down params [all or nothing disabled]: all-or-nothing-disabled 1`] = `
[
  "select 1 from pg_database where datname = 'mikro_orm_test_migrations'",
  "select table_name, table_schema as schema_name, (select pg_catalog.obj_description(c.oid) from pg_catalog.pg_class c where c.oid = (select ('"' || table_schema || '"."' || table_name || '"')::regclass::oid) and c.relname = table_name) as table_comment from information_schema.tables where "table_schema" not like 'pg_%' and "table_schema" not like 'crdb_%' and "table_schema" not like '_timescaledb_%' and "table_schema" not in ('information_schema', 'tiger', 'topology') and table_name != 'geometry_columns' and table_name != 'spatial_ref_sys' and table_type != 'VIEW' and table_name not in (select inhrelid::regclass::text from pg_inherits) order by table_name",
  "select schema_name from information_schema.schemata where "schema_name" not like 'pg_%' and "schema_name" not like 'crdb_%' and "schema_name" not like '_timescaledb_%' and "schema_name" not in ('information_schema', 'tiger', 'topology') order by schema_name",
  "create table "custom"."mikro_orm_migrations" ("id" serial primary key, "name" varchar(255) not null, "executed_at" timestamptz(6) not null default current_timestamp(6));",
  "select "m0".* from "custom"."mikro_orm_migrations" as "m0" order by "m0"."id" asc",
  "[migrator] Processing 'Migration20191013214813'",
  "begin",
  "set names 'utf8';",
  "select 1",
  "commit",
  "insert into "custom"."mikro_orm_migrations" ("name") values (?)",
  "[migrator] Applied 'Migration20191013214813'",
  "select table_name, table_schema as schema_name, (select pg_catalog.obj_description(c.oid) from pg_catalog.pg_class c where c.oid = (select ('"' || table_schema || '"."' || table_name || '"')::regclass::oid) and c.relname = table_name) as table_comment from information_schema.tables where "table_schema" not like 'pg_%' and "table_schema" not like 'crdb_%' and "table_schema" not like '_timescaledb_%' and "table_schema" not in ('information_schema', 'tiger', 'topology') and table_name != 'geometry_columns' and table_name != 'spatial_ref_sys' and table_type != 'VIEW' and table_name not in (select inhrelid::regclass::text from pg_inherits) order by table_name",
  "select "m0".* from "custom"."mikro_orm_migrations" as "m0" order by "m0"."id" asc",
  "[migrator] Processing 'Migration20191013214813'",
  "begin",
  "set names 'utf8';",
  "select 1",
  "commit",
  "delete from "custom"."mikro_orm_migrations" where "name" in (?, ?, ?, ?)",
  "[migrator] Reverted 'Migration20191013214813'",
  "select table_name, table_schema as schema_name, (select pg_catalog.obj_description(c.oid) from pg_catalog.pg_class c where c.oid = (select ('"' || table_schema || '"."' || table_name || '"')::regclass::oid) and c.relname = table_name) as table_comment from information_schema.tables where "table_schema" not like 'pg_%' and "table_schema" not like 'crdb_%' and "table_schema" not like '_timescaledb_%' and "table_schema" not in ('information_schema', 'tiger', 'topology') and table_name != 'geometry_columns' and table_name != 'spatial_ref_sys' and table_type != 'VIEW' and table_name not in (select inhrelid::regclass::text from pg_inherits) order by table_name",
  "select "m0".* from "custom"."mikro_orm_migrations" as "m0" order by "m0"."id" asc",
  "[migrator] Processing 'Migration20191013214813'",
  "begin",
  "set names 'utf8';",
  "select 1",
  "commit",
  "insert into "custom"."mikro_orm_migrations" ("name") values (?)",
  "[migrator] Applied 'Migration20191013214813'",
  "select table_name, table_schema as schema_name, (select pg_catalog.obj_description(c.oid) from pg_catalog.pg_class c where c.oid = (select ('"' || table_schema || '"."' || table_name || '"')::regclass::oid) and c.relname = table_name) as table_comment from information_schema.tables where "table_schema" not like 'pg_%' and "table_schema" not like 'crdb_%' and "table_schema" not like '_timescaledb_%' and "table_schema" not in ('information_schema', 'tiger', 'topology') and table_name != 'geometry_columns' and table_name != 'spatial_ref_sys' and table_type != 'VIEW' and table_name not in (select inhrelid::regclass::text from pg_inherits) order by table_name",
  "select "m0".* from "custom"."mikro_orm_migrations" as "m0" order by "m0"."id" asc",
  "[migrator] Processing 'Migration20191013214813'",
  "begin",
  "set names 'utf8';",
  "select 1",
  "commit",
  "delete from "custom"."mikro_orm_migrations" where "name" in (?, ?, ?, ?)",
  "[migrator] Reverted 'Migration20191013214813'",
  "select table_name, table_schema as schema_name, (select pg_catalog.obj_description(c.oid) from pg_catalog.pg_class c where c.oid = (select ('"' || table_schema || '"."' || table_name || '"')::regclass::oid) and c.relname = table_name) as table_comment from information_schema.tables where "table_schema" not like 'pg_%' and "table_schema" not like 'crdb_%' and "table_schema" not like '_timescaledb_%' and "table_schema" not in ('information_schema', 'tiger', 'topology') and table_name != 'geometry_columns' and table_name != 'spatial_ref_sys' and table_type != 'VIEW' and table_name not in (select inhrelid::regclass::text from pg_inherits) order by table_name",
  "select "m0".* from "custom"."mikro_orm_migrations" as "m0" order by "m0"."id" asc",
  "[migrator] Processing 'Migration20191013214813'",
  "begin",
  "set names 'utf8';",
  "select 1",
  "commit",
  "insert into "custom"."mikro_orm_migrations" ("name") values (?)",
  "[migrator] Applied 'Migration20191013214813'",
  "select table_name, table_schema as schema_name, (select pg_catalog.obj_description(c.oid) from pg_catalog.pg_class c where c.oid = (select ('"' || table_schema || '"."' || table_name || '"')::regclass::oid) and c.relname = table_name) as table_comment from information_schema.tables where "table_schema" not like 'pg_%' and "table_schema" not like 'crdb_%' and "table_schema" not like '_timescaledb_%' and "table_schema" not in ('information_schema', 'tiger', 'topology') and table_name != 'geometry_columns' and table_name != 'spatial_ref_sys' and table_type != 'VIEW' and table_name not in (select inhrelid::regclass::text from pg_inherits) order by table_name",
  "select "m0".* from "custom"."mikro_orm_migrations" as "m0" order by "m0"."id" asc",
  "select table_name, table_schema as schema_name, (select pg_catalog.obj_description(c.oid) from pg_catalog.pg_class c where c.oid = (select ('"' || table_schema || '"."' || table_name || '"')::regclass::oid) and c.relname = table_name) as table_comment from information_schema.tables where "table_schema" not like 'pg_%' and "table_schema" not like 'crdb_%' and "table_schema" not like '_timescaledb_%' and "table_schema" not in ('information_schema', 'tiger', 'topology') and table_name != 'geometry_columns' and table_name != 'spatial_ref_sys' and table_type != 'VIEW' and table_name not in (select inhrelid::regclass::text from pg_inherits) order by table_name",
  "select "m0".* from "custom"."mikro_orm_migrations" as "m0" order by "m0"."id" asc",
  "[migrator] Processing 'Migration20191013214813'",
  "begin",
  "set names 'utf8';",
  "select 1",
  "commit",
  "delete from "custom"."mikro_orm_migrations" where "name" in (?, ?, ?, ?)",
  "[migrator] Reverted 'Migration20191013214813'",
]
`;

exports[`Migrator (postgres) up/down params [all or nothing enabled]: all-or-nothing 1`] = `
[
  "select 1 from pg_database where datname = 'mikro_orm_test_migrations'",
  "select table_name, table_schema as schema_name, (select pg_catalog.obj_description(c.oid) from pg_catalog.pg_class c where c.oid = (select ('"' || table_schema || '"."' || table_name || '"')::regclass::oid) and c.relname = table_name) as table_comment from information_schema.tables where "table_schema" not like 'pg_%' and "table_schema" not like 'crdb_%' and "table_schema" not like '_timescaledb_%' and "table_schema" not in ('information_schema', 'tiger', 'topology') and table_name != 'geometry_columns' and table_name != 'spatial_ref_sys' and table_type != 'VIEW' and table_name not in (select inhrelid::regclass::text from pg_inherits) order by table_name",
  "select schema_name from information_schema.schemata where "schema_name" not like 'pg_%' and "schema_name" not like 'crdb_%' and "schema_name" not like '_timescaledb_%' and "schema_name" not in ('information_schema', 'tiger', 'topology') order by schema_name",
  "create table "custom"."mikro_orm_migrations" ("id" serial primary key, "name" varchar(255) not null, "executed_at" timestamptz(6) not null default current_timestamp(6));",
  "begin",
  "select "m0".* from "custom"."mikro_orm_migrations" as "m0" order by "m0"."id" asc",
  "[migrator] Processing 'Migration20191013214813'",
  "savepointtrx\\d+",
  "set names 'utf8';",
  "select 1",
  "release savepointtrx\\d+",
  "insert into "custom"."mikro_orm_migrations" ("name") values (?)",
  "[migrator] Applied 'Migration20191013214813'",
  "commit",
  "select table_name, table_schema as schema_name, (select pg_catalog.obj_description(c.oid) from pg_catalog.pg_class c where c.oid = (select ('"' || table_schema || '"."' || table_name || '"')::regclass::oid) and c.relname = table_name) as table_comment from information_schema.tables where "table_schema" not like 'pg_%' and "table_schema" not like 'crdb_%' and "table_schema" not like '_timescaledb_%' and "table_schema" not in ('information_schema', 'tiger', 'topology') and table_name != 'geometry_columns' and table_name != 'spatial_ref_sys' and table_type != 'VIEW' and table_name not in (select inhrelid::regclass::text from pg_inherits) order by table_name",
  "begin",
  "select "m0".* from "custom"."mikro_orm_migrations" as "m0" order by "m0"."id" asc",
  "[migrator] Processing 'Migration20191013214813'",
  "savepointtrx\\d+",
  "set names 'utf8';",
  "select 1",
  "release savepointtrx\\d+",
  "delete from "custom"."mikro_orm_migrations" where "name" in (?, ?, ?, ?)",
  "[migrator] Reverted 'Migration20191013214813'",
  "commit",
  "select table_name, table_schema as schema_name, (select pg_catalog.obj_description(c.oid) from pg_catalog.pg_class c where c.oid = (select ('"' || table_schema || '"."' || table_name || '"')::regclass::oid) and c.relname = table_name) as table_comment from information_schema.tables where "table_schema" not like 'pg_%' and "table_schema" not like 'crdb_%' and "table_schema" not like '_timescaledb_%' and "table_schema" not in ('information_schema', 'tiger', 'topology') and table_name != 'geometry_columns' and table_name != 'spatial_ref_sys' and table_type != 'VIEW' and table_name not in (select inhrelid::regclass::text from pg_inherits) order by table_name",
  "begin",
  "select "m0".* from "custom"."mikro_orm_migrations" as "m0" order by "m0"."id" asc",
  "[migrator] Processing 'Migration20191013214813'",
  "savepointtrx\\d+",
  "set names 'utf8';",
  "select 1",
  "release savepointtrx\\d+",
  "insert into "custom"."mikro_orm_migrations" ("name") values (?)",
  "[migrator] Applied 'Migration20191013214813'",
  "commit",
  "select table_name, table_schema as schema_name, (select pg_catalog.obj_description(c.oid) from pg_catalog.pg_class c where c.oid = (select ('"' || table_schema || '"."' || table_name || '"')::regclass::oid) and c.relname = table_name) as table_comment from information_schema.tables where "table_schema" not like 'pg_%' and "table_schema" not like 'crdb_%' and "table_schema" not like '_timescaledb_%' and "table_schema" not in ('information_schema', 'tiger', 'topology') and table_name != 'geometry_columns' and table_name != 'spatial_ref_sys' and table_type != 'VIEW' and table_name not in (select inhrelid::regclass::text from pg_inherits) order by table_name",
  "begin",
  "select "m0".* from "custom"."mikro_orm_migrations" as "m0" order by "m0"."id" asc",
  "[migrator] Processing 'Migration20191013214813'",
  "savepointtrx\\d+",
  "set names 'utf8';",
  "select 1",
  "release savepointtrx\\d+",
  "delete from "custom"."mikro_orm_migrations" where "name" in (?, ?, ?, ?)",
  "[migrator] Reverted 'Migration20191013214813'",
  "commit",
  "select table_name, table_schema as schema_name, (select pg_catalog.obj_description(c.oid) from pg_catalog.pg_class c where c.oid = (select ('"' || table_schema || '"."' || table_name || '"')::regclass::oid) and c.relname = table_name) as table_comment from information_schema.tables where "table_schema" not like 'pg_%' and "table_schema" not like 'crdb_%' and "table_schema" not like '_timescaledb_%' and "table_schema" not in ('information_schema', 'tiger', 'topology') and table_name != 'geometry_columns' and table_name != 'spatial_ref_sys' and table_type != 'VIEW' and table_name not in (select inhrelid::regclass::text from pg_inherits) order by table_name",
  "begin",
  "select "m0".* from "custom"."mikro_orm_migrations" as "m0" order by "m0"."id" asc",
  "[migrator] Processing 'Migration20191013214813'",
  "savepointtrx\\d+",
  "set names 'utf8';",
  "select 1",
  "release savepointtrx\\d+",
  "insert into "custom"."mikro_orm_migrations" ("name") values (?)",
  "[migrator] Applied 'Migration20191013214813'",
  "commit",
  "select table_name, table_schema as schema_name, (select pg_catalog.obj_description(c.oid) from pg_catalog.pg_class c where c.oid = (select ('"' || table_schema || '"."' || table_name || '"')::regclass::oid) and c.relname = table_name) as table_comment from information_schema.tables where "table_schema" not like 'pg_%' and "table_schema" not like 'crdb_%' and "table_schema" not like '_timescaledb_%' and "table_schema" not in ('information_schema', 'tiger', 'topology') and table_name != 'geometry_columns' and table_name != 'spatial_ref_sys' and table_type != 'VIEW' and table_name not in (select inhrelid::regclass::text from pg_inherits) order by table_name",
  "begin",
  "select "m0".* from "custom"."mikro_orm_migrations" as "m0" order by "m0"."id" asc",
  "commit",
  "select table_name, table_schema as schema_name, (select pg_catalog.obj_description(c.oid) from pg_catalog.pg_class c where c.oid = (select ('"' || table_schema || '"."' || table_name || '"')::regclass::oid) and c.relname = table_name) as table_comment from information_schema.tables where "table_schema" not like 'pg_%' and "table_schema" not like 'crdb_%' and "table_schema" not like '_timescaledb_%' and "table_schema" not in ('information_schema', 'tiger', 'topology') and table_name != 'geometry_columns' and table_name != 'spatial_ref_sys' and table_type != 'VIEW' and table_name not in (select inhrelid::regclass::text from pg_inherits) order by table_name",
  "begin",
  "select "m0".* from "custom"."mikro_orm_migrations" as "m0" order by "m0"."id" asc",
  "[migrator] Processing 'Migration20191013214813'",
  "savepointtrx\\d+",
  "set names 'utf8';",
  "select 1",
  "release savepointtrx\\d+",
  "delete from "custom"."mikro_orm_migrations" where "name" in (?, ?, ?, ?)",
  "[migrator] Reverted 'Migration20191013214813'",
  "commit",
]
`;

exports[`Migrator (postgres) up/down with explicit transaction: explicit-tx 1`] = `
[
  "begin",
  "select 1 from pg_database where datname = 'mikro_orm_test_migrations'",
  "select table_name, table_schema as schema_name, (select pg_catalog.obj_description(c.oid) from pg_catalog.pg_class c where c.oid = (select ('"' || table_schema || '"."' || table_name || '"')::regclass::oid) and c.relname = table_name) as table_comment from information_schema.tables where "table_schema" not like 'pg_%' and "table_schema" not like 'crdb_%' and "table_schema" not like '_timescaledb_%' and "table_schema" not in ('information_schema', 'tiger', 'topology') and table_name != 'geometry_columns' and table_name != 'spatial_ref_sys' and table_type != 'VIEW' and table_name not in (select inhrelid::regclass::text from pg_inherits) order by table_name",
  "select schema_name from information_schema.schemata where "schema_name" not like 'pg_%' and "schema_name" not like 'crdb_%' and "schema_name" not like '_timescaledb_%' and "schema_name" not in ('information_schema', 'tiger', 'topology') order by schema_name",
  "create table "custom"."mikro_orm_migrations" ("id" serial primary key, "name" varchar(255) not null, "executed_at" timestamptz(6) not null default current_timestamp(6));",
  "select "m0".* from "custom"."mikro_orm_migrations" as "m0" order by "m0"."id" asc",
  "[migrator] Processing 'Migration20200922100001'",
  "savepointtrx_xx",
  "set names 'utf8';",
  "select 1",
  "release savepointtrx_xx",
  "insert into "custom"."mikro_orm_migrations" ("name") values (?)",
  "[migrator] Applied 'Migration20200922100001'",
  "[migrator] Processing 'Migration20200922100002'",
  "savepointtrx_xx",
  "set names 'utf8';",
  "select 1",
  "release savepointtrx_xx",
  "insert into "custom"."mikro_orm_migrations" ("name") values (?)",
  "[migrator] Applied 'Migration20200922100002'",
  "select table_name, table_schema as schema_name, (select pg_catalog.obj_description(c.oid) from pg_catalog.pg_class c where c.oid = (select ('"' || table_schema || '"."' || table_name || '"')::regclass::oid) and c.relname = table_name) as table_comment from information_schema.tables where "table_schema" not like 'pg_%' and "table_schema" not like 'crdb_%' and "table_schema" not like '_timescaledb_%' and "table_schema" not in ('information_schema', 'tiger', 'topology') and table_name != 'geometry_columns' and table_name != 'spatial_ref_sys' and table_type != 'VIEW' and table_name not in (select inhrelid::regclass::text from pg_inherits) order by table_name",
  "select "m0".* from "custom"."mikro_orm_migrations" as "m0" order by "m0"."id" asc",
  "[migrator] Processing 'Migration20200922100002'",
  "savepointtrx_xx",
  "set names 'utf8';",
  "select 1",
  "release savepointtrx_xx",
  "delete from "custom"."mikro_orm_migrations" where "name" in (?, ?, ?, ?)",
  "[migrator] Reverted 'Migration20200922100002'",
  "select table_name, table_schema as schema_name, (select pg_catalog.obj_description(c.oid) from pg_catalog.pg_class c where c.oid = (select ('"' || table_schema || '"."' || table_name || '"')::regclass::oid) and c.relname = table_name) as table_comment from information_schema.tables where "table_schema" not like 'pg_%' and "table_schema" not like 'crdb_%' and "table_schema" not like '_timescaledb_%' and "table_schema" not in ('information_schema', 'tiger', 'topology') and table_name != 'geometry_columns' and table_name != 'spatial_ref_sys' and table_type != 'VIEW' and table_name not in (select inhrelid::regclass::text from pg_inherits) order by table_name",
  "select "m0".* from "custom"."mikro_orm_migrations" as "m0" order by "m0"."id" asc",
  "[migrator] Processing 'Migration20200922100001'",
  "savepointtrx_xx",
  "set names 'utf8';",
  "select 1",
  "release savepointtrx_xx",
  "delete from "custom"."mikro_orm_migrations" where "name" in (?, ?, ?, ?)",
  "[migrator] Reverted 'Migration20200922100001'",
  "select table_name, table_schema as schema_name, (select pg_catalog.obj_description(c.oid) from pg_catalog.pg_class c where c.oid = (select ('"' || table_schema || '"."' || table_name || '"')::regclass::oid) and c.relname = table_name) as table_comment from information_schema.tables where "table_schema" not like 'pg_%' and "table_schema" not like 'crdb_%' and "table_schema" not like '_timescaledb_%' and "table_schema" not in ('information_schema', 'tiger', 'topology') and table_name != 'geometry_columns' and table_name != 'spatial_ref_sys' and table_type != 'VIEW' and table_name not in (select inhrelid::regclass::text from pg_inherits) order by table_name",
  "select "m0".* from "custom"."mikro_orm_migrations" as "m0" order by "m0"."id" asc",
  "commit",
]
`;
